# opt_utilities

./: CMakeLists.txt  Findltdl.cmake  Findmuparser.cmake  LICENSE  README  license  license.txt  makefile  run_me  strip_svn.sh  test.cc  test1.cc  version_ctrl.cc
core/: constrained_model.hpp  default_data_set.hpp  fitter.hpp  fp_fo_adapter.hpp  freeze_param.hpp  num_diff.hpp  numdiff.hpp  opt_exception.hpp  opt_traits.hpp  optimizer.hpp  pre_estimater.hpp  sorted_data_set.hpp
data_sets/: default_data_set.hpp  shared_table_data_set.hpp  sorted_data_set.hpp
distributions/: component.hpp  kmm_component.hpp  normed_dgauss1d.hpp  normed_gauss1d.hpp  uniformed.hpp
doxygen/: Doxyfile  doxygen
dynamical_fit/: dynamical_fit.cpp
dynamical_models/: lin1d.cpp  vt_temperature.cpp
error_estimator/: error_estimator.hpp
example/: Makefile  test_fitter.cpp  test_optimizer.cpp
interface/: c_example.cc  fortran_example.f90  makefile  opt.cc  opt.h  opt_io.hpp  optdl.hpp  optimize.hpp  perform_fit.hpp  pyfunc_obj.hpp  pymodel.hpp  type_depository.hpp
math/: num_diff.hpp  vector_operation.hpp
misc/: bootstrap.hpp  data_loaders.hpp  opt_all.hpp  optvec.hpp
model_doc/: beta1d.html  beta1d.info  beta1d.tex  bl.html  bl.info  bl.tex  bpl.html  bpl.info  bpl.tex  bremss.html  bremss.info  bremss.tex  component.html  component.info  component.tex  constant.html  constant.info  constant.tex  dbeta1d.html  dbeta1d.info  dbeta1d.tex  dualgauss1d.html  dualgauss1d.info  dualgauss1d.tex  gauss1d.html  gauss1d.info  gauss1d.tex  gauss1d_bkg.html  html2info.sh  latex2svg.sh  lin1d.html  lin1d.info  lin1d.tex  make_doc.sh  nbeta1d.html  nbeta1d.info  nbeta1d.tex  nfw.html  nfw.info  nfw.tex  (+28 more)
models/: add_model.hpp  bl1d.hpp  (+28 more)
(+69 files in other folders)
