cmake_minimum_required(VERSION 2.6)
PROJECT(opt_utilities,CXX)

add_subdirectory(core)
add_subdirectory(data_sets)
add_subdirectory(interface)
add_subdirectory(example)
add_subdirectory(methods)
add_subdirectory(misc)
add_subdirectory(models)
add_subdirectory(statistics)
add_subdirectory(utilities)
add_subdirectory(vmodels)
include_directories (${PROJECT_SOURCE_DIR})

set(LIBRARY_OUTPUT_PATH,lib)
ADD_LIBRARY(opt STATIC interface/opt.cc)
ADD_EXECUTABLE(test_fitter example/test_fitter.cpp)
ADD_EXECUTABLE(test_optimizer example/test_optimizer.cpp)
